Call motuclient from Python

--- a/cmems/data_access/motuclient/motu-client.ipynb
+++ b/cmems/data_access/motuclient/motu-client.ipynb
@@ -1,21 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Before running the following cells, download netCFD file(default.nc) using the motu client\n",
-    "- install motu client: pip install motuclient\n",
-    "- create/check config file (motu-client.ini)\n",
-    "- set shell environmnet variables for CMEMS credentials (or define them in the config)\n",
-    "- download the file: motuclient --config motu-client.ini --user=\\\\${UN_CMEMS} --pwd=\\\\${PW_CMEMS}\n",
-    "\n",
-    "Reference: https://github.com/clstoulouse/motu-client-python"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +13,149 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The Python library motuclient has to be installed: pip install motuclient\n",
+    "- Valid username and password for CMEMS need to be available"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download data via command line directly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download netCFD file (default.nc) using the motu client from command line\n",
+    "- create/check config file (motu-client.ini)\n",
+    "- set shell environment variables for CMEMS credentials (or define them in the config)\n",
+    "- download the file: motuclient --config motu-client.ini --user=\\\\${UN_CMEMS} --pwd=\\\\${PW_CMEMS}\n",
+    "\n",
+    "Reference: https://github.com/clstoulouse/motu-client-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Download data via command line call from Python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set credentials from environment variables\n",
+    "UN_CMEMS = %env UN_CMEMS\n",
+    "PW_CMEMS = %env PW_CMEMS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "motu_cmd = 'motuclient'\n",
+    "user = UN_CMEMS\n",
+    "pwd = PW_CMEMS\n",
+    "motu = 'http://nrt.cmems-du.eu/motu-web/Motu'\n",
+    "service_id = 'GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS'\n",
+    "product_id = 'global-analysis-forecast-wav-001-027'\n",
+    "date_min = '2020-12-01'\n",
+    "date_max = '2020-12-01'\n",
+    "latitude_min = '27'\n",
+    "latitude_max = '61'\n",
+    "longitude_min = '-20'\n",
+    "longitude_max = '30'\n",
+    "depth_min = '0.493'\n",
+    "depth_max = '0.4942'\n",
+    "variable = 'VHM0'\n",
+    "out_dir = '.'\n",
+    "out_name = 'default.nc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmd = '{motu_cmd} \\\n",
+    "       --user={user} \\\n",
+    "       --pwd={pwd} \\\n",
+    "       --motu={motu} \\\n",
+    "       --service-id={service_id} \\\n",
+    "       --product-id={product_id} \\\n",
+    "       --date-min=\"{date_min}\" \\\n",
+    "       --date-max=\"{date_max}\" \\\n",
+    "       --latitude-min={latitude_min} \\\n",
+    "       --latitude-max={latitude_max} \\\n",
+    "       --longitude-min={longitude_min} \\\n",
+    "       --longitude-max={longitude_max} \\\n",
+    "       --depth-min={depth_min} \\\n",
+    "       --depth-max={depth_max} \\\n",
+    "       --variable={variable} \\\n",
+    "       --out-dir=\"{out_dir}\" \\\n",
+    "       --out-name=\"{out_name}\"'.format(motu_cmd=motu_cmd,\n",
+    "                                    user=user,\n",
+    "                                    pwd=pwd,\n",
+    "                                    motu=motu,\n",
+    "                                    service_id=service_id,\n",
+    "                                    product_id=product_id,\n",
+    "                                    date_min=date_min,\n",
+    "                                    date_max=date_max,\n",
+    "                                    latitude_min=latitude_min,\n",
+    "                                    latitude_max=latitude_max,\n",
+    "                                    longitude_min=longitude_min,\n",
+    "                                    longitude_max=longitude_max,\n",
+    "                                    depth_min=depth_min,\n",
+    "                                    depth_max=depth_max,\n",
+    "                                    variable=variable,\n",
+    "                                    out_dir=out_dir,\n",
+    "                                    out_name=out_name)\n",
+    "\n",
+    "# Or use config file (motu-client.ini)\n",
+    "#cmd = 'motuclient --config motu-client.ini --user=${UN_CMEMS} --pwd=${PW_CMEMS}'\n",
+    "\n",
+    "os.system(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read and plot data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +173,12 @@
        "<class 'netCDF4._netCDF4.Dataset'>\n",
        "root group (NETCDF3_CLASSIC data model, file format NETCDF3):\n",
        "    Conventions: CF-1.6\n",
-       "    time_coverage_start: 20210128-03:00:00\n",
-       "    time_coverage_end: 20210129-00:00:00\n",
-       "    date_created: 20210119-08:28:00\n",
+       "    time_coverage_start: 20210205-03:00:00\n",
+       "    time_coverage_end: 20210206-00:00:00\n",
+       "    date_created: 20210127-08:28:00\n",
        "    product_type: forecast\n",
        "    product: GLOBAL_ANALYSIS_FORECAST_WAV_001_027\n",
-       "    product_ref_date: 20210119-00:00:00\n",
+       "    product_ref_date: 20210127-00:00:00\n",
        "    product_range: D+9\n",
        "    product_user_manual: http://marine.copernicus.eu/documents/PUM/CMEMS-GLO-PUM-001-027.pdf\n",
        "    quality_information_document:  http://marine.copernicus.eu/documents/QUID/CMEMS-GLO-QUID-001-027.\n",
@@ -80,7 +208,7 @@
        "    groups: "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
