Update motu notebooks

--- a/cmems/data_access/motu/motu-client.ipynb
+++ b/cmems/data_access/motu/motu-client.ipynb
@@ -41,7 +41,10 @@
     "Download netCFD file (default.nc) using the motu client from command line\n",
     "- create/check config file (motu-client.ini)\n",
     "- set shell environment variables for CMEMS credentials (or define them in the config)\n",
-    "- download the file: motuclient --config motu-client.ini --user=\\\\${UN_CMEMS} --pwd=\\\\${PW_CMEMS}\n",
+    "- download the file: \n",
+    "   - Linux: motuclient --config motu-client.ini --user=\\\\${UN_CMEMS} --pwd=\\\\${PW_CMEMS}\n",
+    "   - Windows: motuclient --config motu-client.ini --user=%UN_CMEMS% --pwd=%PW_CMEMS%\n",
+    "\n",
     "\n",
     "Reference: https://github.com/clstoulouse/motu-client-python"
    ]
@@ -141,7 +144,8 @@
     "                                    out_name=out_name)\n",
     "\n",
     "# Or use config file (motu-client.ini)\n",
-    "#cmd = 'motuclient --config motu-client.ini --user=${UN_CMEMS} --pwd=${PW_CMEMS}'\n",
+    "#cmd = 'motuclient --config motu-client.ini --user=${UN_CMEMS} --pwd=${PW_CMEMS}' # Linux\n",
+    "#cmd = 'motuclient --config motu-client.ini --user=%UN_CMEMS% --pwd=%PW_CMEMS%' # Windows\n",
     "\n",
     "os.system(cmd)"
    ]
