--- a/cmems/data_access/motu/motu-rest-api.ipynb
+++ b/cmems/data_access/motu/motu-rest-api.ipynb
@@ -17,7 +17,8 @@
     "   - https://github.com/clstoulouse/motu/issues/3\n",
     "   - https://forum.marine.copernicus.eu/discussion/628/motu-rest-api\n",
     "   \n",
-    "- API documentation: https://github.com/clstoulouse/motu#ClientRESTAPI"
+    "- API documentation: https://github.com/clstoulouse/motu#ClientRESTAPI\n",
+    "   - use \"mode=console\" as request parameter to download data as byte stream instead of file"
    ]
   },
   {
@@ -88,7 +89,115 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Using motu-client library "
+    "## Using CAS explicitly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_tgt(session, data):\n",
+    "    \"\"\"\n",
+    "    Create Ticket Granting Ticket (TGT)\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    session: str\n",
+    "        session or request object\n",
+    "    data: bytes object in the format b'username=<username>&password=<password>'\n",
+    "        request data containing authentication credentials\n",
+    "    \n",
+    "    Returns\n",
+    "    ------- \n",
+    "    TGT as string\n",
+    "    \"\"\"\n",
+    "      \n",
+    "    response = session.post('https://cmems-cas.cls.fr/cas/v1/tickets', data)\n",
+    "    tgt = response.content    \n",
+    "    tgt = tgt.decode('utf-8')\n",
+    "    \n",
+    "    parser = etree.HTMLParser()\n",
+    "    root = html.fromstring(tgt)\n",
+    "    \n",
+    "    #tree = etree.ElementTree(root)\n",
+    "    #for e in root.iter():\n",
+    "    #    print(tree.getpath(e))\n",
+    "    \n",
+    "    tgt = root.find('.//form').attrib['action'].split('/')[-1]\n",
+    "    \n",
+    "    return tgt\n",
+    "\n",
+    "def create_st(session, service_url, tgt):\n",
+    "    \"\"\"\n",
+    "    Create Service Ticket (ST)\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    session: str \n",
+    "        session or request object\n",
+    "    service_url: str\n",
+    "        url of the service the ticket is requested for\n",
+    "    tgt: str \n",
+    "        Ticket Granting Ticket\n",
+    "    \n",
+    "    Returns\n",
+    "    ------- \n",
+    "    ST as string\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # NOTE: the url has to be url-encoded! This is achieved by quote_plus.\n",
+    "    data = 'service={}'.format(quote_plus(service_url)).encode('utf-8')\n",
+    "    response = session.post('https://cmems-cas.cls.fr/cas/v1/tickets' + '/' + tgt, data)\n",
+    "    st = response.content    \n",
+    "    st = st.decode('utf-8')\n",
+    "    \n",
+    "    return st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create authentication request data\n",
+    "data_tgt = 'username={}&password={}'.format(UN_CMEMS, PW_CMEMS).encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with requests.Session() as session:\n",
+    "    \n",
+    "    # Create TGT\n",
+    "    tgt = create_tgt(session, data_tgt)\n",
+    "    \n",
+    "    # Set session cookie\n",
+    "    #auth_cookies = {\n",
+    "    #    \"tgt\": tgt\n",
+    "    #}\n",
+    "    #cookie_args = {\n",
+    "    #    'secure': True,\n",
+    "    #    'httponly', True,\n",
+    "    #}\n",
+    "    #session.cookies.set(**auth_cookies, **cookie_args)\n",
+    "\n",
+    "    # Describe Product\n",
+    "    st = create_st(session, url_describe_product, tgt)  # create service ticket\n",
+    "    response = session.get(url_describe_product + '&ticket=' + st)\n",
+    "    print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using CAS implicitly via motu-client library"
    ]
   },
   {
