--- a/cmems/data_access/motu/motu-wcs-api.ipynb
+++ b/cmems/data_access/motu/motu-wcs-api.ipynb
@@ -19,7 +19,9 @@
     "\n",
     "- Only NRT (Near Real Time) products are available via WCS (i.e. products with NRT in the name), see \n",
     "   - https://forum.marine.copernicus.eu/discussion/587/how-to-consume-webcoverageservice-wcs-via-motu-resolved\n",
-    "   - http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities"
+    "   - http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities\n",
+    "\n",
+    "- API documentation: https://github.com/clstoulouse/motu#OGC_WCS_API"
    ]
   },
   {
