--- a/52n-days-2021/visualization_challenge.ipynb
+++ b/52n-days-2021/visualization_challenge.ipynb
@@ -79,12 +79,10 @@
     "```\n",
     "2. Use `read_csv(your_file_name)` function of pandas to import the csv as dataframe in the notebook:\n",
     "```python\n",
-    "# drop is used to remove index column if exists\n",
     "dataframe = pd.read_csv(your_file_name).drop(['Unnamed: 0'], axis=1, errors='ignore')\n",
     "```\n",
-    "3. Select the features for analysis:\n",
+    "3. Select the features for analysis by selecting multiple `variable_names`:\n",
     "```python\n",
-    "# use variable_names from table above\n",
     "selected_features = dataframe[['{variable_name}', '{variable_name}', '{variable_name}']] \n",
     "```\n",
     "4. Print the coorlation matrix using `corr()` function:\n",
@@ -106,7 +104,8 @@
    },
    "outputs": [],
    "source": [
-    "# visulize coorleation matrix of selected features "
+    "# visulize coorleation matrix of selected features\n",
+    "## your code\n"
    ]
   },
   {
@@ -133,7 +132,7 @@
    "outputs": [],
    "source": [
     "# visulize pairwise features each with a scatter plots\n",
-    "\n"
+    "## your code\n"
    ]
   },
   {
@@ -141,7 +140,7 @@
    "id": "large-ground",
    "metadata": {},
    "source": [
-    "6. Use the following fuction and choose a feature (`variable_name`) to visulize:\n",
+    "6. Use the following function to plot an interactive map and choose a feature (`variable_name`) to visulize:\n",
     "```python\n",
     "fig = px.scatter_mapbox(dataframe,\n",
     "                lat=dataframe.LAT,\n",
@@ -159,7 +158,7 @@
    "outputs": [],
    "source": [
     "# visualize AIS Data in plotly\n",
-    "\n"
+    "## your code\n"
    ]
   }
  ],
