--- a/52n-days-2021/visualization_challenge.ipynb
+++ b/52n-days-2021/visualization_challenge.ipynb
@@ -69,7 +69,7 @@
     "| VHM0_SW2      | Spectral significant secondary swell wave height\n",
     "\n",
     "\n",
-    "- Make sure first to download the the CSV files.\n",
+    "- Make sure first to download the CSV files.\n",
     "- Copy the CSV-file into the working directory or upload it in google colab disk space.\n",
     "\n",
     "\n",
@@ -105,7 +105,7 @@
    "outputs": [],
    "source": [
     "# visulize coorleation matrix of selected features\n",
-    "## your code\n"
+    "# your code here\n"
    ]
   },
   {
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# visulize pairwise features each with a scatter plots\n",
-    "## your code\n"
+    "# your code here\n"
    ]
   },
   {
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "# visualize AIS Data in plotly\n",
-    "## your code\n"
+    "# your code here\n"
    ]
   }
  ],
