add links to the notebook

--- a/52n-days-2021/visualization_challenge.ipynb
+++ b/52n-days-2021/visualization_challenge.ipynb
@@ -14,15 +14,20 @@
    "id": "dedicated-proof",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-02-17T15:36:40.622183Z",
-     "start_time": "2021-02-17T15:36:38.756842Z"
+     "end_time": "2021-02-18T12:50:18.101618Z",
+     "start_time": "2021-02-18T12:50:07.625040Z"
     }
    },
    "outputs": [],
    "source": [
+    "!pip install seaborn\n",
+    "!pip install xarray\n",
+    "!pip install numpy\n",
+    "!pip install pandas\n",
+    "!pip install plotly\n",
+    "\n",
     "import plotly.express as px\n",
     "import pandas as pd\n",
-    "import netCDF4 as nc\n",
     "import numpy as np\n",
     "import xarray as xr\n",
     "import seaborn as sns"
@@ -68,8 +73,15 @@
     "| VTM01_WW      |  Spectral moments (0,1) wind wave period\n",
     "| VHM0_SW2      | Spectral significant secondary swell wave height\n",
     "\n",
-    "\n",
     "- Make sure first to download the CSV files.\n",
+    "\n",
+    "\n",
+    "<small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AIS only:https://github.com/MartinPontius/MariData/blob/main/2016/2016_AIS.csv</small>\n",
+    "\n",
+    "\n",
+    "<small> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AIS+Weather: https://github.com/MartinPontius/MariData/blob/main/2016/2016_merged.csv</small>\n",
+    "\n",
+    "\n",
     "- Copy the CSV-file into the working directory or upload it in google colab disk space.\n",
     "\n",
     "\n",
