--- a/52n-days-2021/visualization_challenge.ipynb
+++ b/52n-days-2021/visualization_challenge.ipynb
@@ -125,7 +125,7 @@
    "id": "printable-drunk",
    "metadata": {},
    "source": [
-    "5. Print the coorlation matrix using `pairplot(selected_features)` function:\n",
+    "5. Plot the coorlation pairwise using `pairplot(selected_features)` function:\n",
     "```python\n",
     "sns.pairplot(selected_features)\n",
     "```"
