Update cmems url from http to https

--- a/cmems/data_access/cmems_wms.ipynb
+++ b/cmems/data_access/cmems_wms.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "# WMS service\n",
     "\n",
-    "wms = WebMapService('http://nrt.cmems-du.eu/thredds/wms/global-analysis-forecast-wav-001-027', version='1.3.0')"
+    "wms = WebMapService('https://nrt.cmems-du.eu/thredds/wms/global-analysis-forecast-wav-001-027', version='1.3.0')"
    ]
   },
   {
