--- a/cmems/data_access/motu/motu-client.ipynb
+++ b/cmems/data_access/motu/motu-client.ipynb
@@ -76,7 +76,7 @@
     "motu_cmd = 'motuclient'\n",
     "user = UN_CMEMS\n",
     "pwd = PW_CMEMS\n",
-    "motu = 'http://nrt.cmems-du.eu/motu-web/Motu'\n",
+    "motu = 'https://nrt.cmems-du.eu/motu-web/Motu'\n",
     "service_id = 'GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS'\n",
     "product_id = 'global-analysis-forecast-wav-001-027'\n",
     "date_min = '2020-12-01'\n",
