--- a/cmems/data_access/motu/motu-rest-api.ipynb
+++ b/cmems/data_access/motu/motu-rest-api.ipynb
@@ -32,14 +32,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nrt.cmems-du.eu/motu-web/Motu?action=describeproduct&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027"
+    "https://nrt.cmems-du.eu/motu-web/Motu?action=describeproduct&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nrt.cmems-du.eu/motu-web/Motu?action=productdownload&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027&x_lo=1&x_hi=4&y_lo=-2&y_hi=2&t_lo=2021-01-01T00:00:00&t_hi=2021-01-01T03:00:00"
+    "https://nrt.cmems-du.eu/motu-web/Motu?action=productdownload&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027&x_lo=1&x_hi=4&y_lo=-2&y_hi=2&t_lo=2021-01-01T00:00:00&t_hi=2021-01-01T03:00:00"
    ]
   },
   {
@@ -81,8 +81,8 @@
    "outputs": [],
    "source": [
     "# Define urls\n",
-    "url_describe_product = 'http://nrt.cmems-du.eu/motu-web/Motu?action=describeproduct&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027'\n",
-    "url_product_download = 'http://nrt.cmems-du.eu/motu-web/Motu?action=productdownload&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027&x_lo=1&x_hi=4&y_lo=-2&y_hi=2&t_lo=2021-01-01T00:00:00&t_hi=2021-01-01T03:00:00&mode=console'"
+    "url_describe_product = 'https://nrt.cmems-du.eu/motu-web/Motu?action=describeproduct&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027'\n",
+    "url_product_download = 'https://nrt.cmems-du.eu/motu-web/Motu?action=productdownload&service=GLOBAL_ANALYSIS_FORECAST_WAV_001_027-TDS&product=global-analysis-forecast-wav-001-027&x_lo=1&x_hi=4&y_lo=-2&y_hi=2&t_lo=2021-01-01T00:00:00&t_hi=2021-01-01T03:00:00&mode=console'"
    ]
   },
   {
