--- a/cmems/data_access/motu/motu-wcs-api.ipynb
+++ b/cmems/data_access/motu/motu-wcs-api.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "- Only NRT (Near Real Time) products are available via WCS (i.e. products with NRT in the name), see \n",
     "   - https://forum.marine.copernicus.eu/discussion/587/how-to-consume-webcoverageservice-wcs-via-motu-resolved\n",
-    "   - http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities\n",
+    "   - https://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities\n",
     "\n",
     "- API documentation: https://github.com/clstoulouse/motu#OGC_WCS_API"
    ]
@@ -35,21 +35,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities"
+    "https://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=DescribeCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2"
+    "https://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=DescribeCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "http://nrt.cmems-du.eu/motu-web/wcs?service=WCS&version=2.0.1&request=GetCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2&subset=Time(1451606400,1451606401)&subset=Lat(50,70)&subset=Lon(0,10)&rangeSubset=wind_speed"
+    "https://nrt.cmems-du.eu/motu-web/wcs?service=WCS&version=2.0.1&request=GetCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2&subset=Time(1451606400,1451606401)&subset=Lat(50,70)&subset=Lon(0,10)&rangeSubset=wind_speed"
    ]
   },
   {
@@ -95,13 +95,13 @@
    "outputs": [],
    "source": [
     "# Define urls\n",
-    "url_service = 'http://nrt.cmems-du.eu/motu-web/wcs'\n",
+    "url_service = 'https://nrt.cmems-du.eu/motu-web/wcs'\n",
     "url_cas = 'https://cmems-cas.cls.fr/cas'\n",
     "url_cas_login = 'https://cmems-cas.cls.fr/cas/login'\n",
     "url_cas_tickets = 'https://cmems-cas.cls.fr/cas/v1/tickets'\n",
-    "url_get_capabilities = 'http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities'\n",
-    "url_describe_coverage = 'http://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=DescribeCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2'\n",
-    "url_get_coverage = 'http://nrt.cmems-du.eu/motu-web/wcs?service=WCS&version=2.0.1&request=GetCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2&subset=Time(1451606400,1451606401)&subset=Lat(50,70)&subset=Lon(0,10)&rangeSubset=wind_speed'"
+    "url_get_capabilities = 'https://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=GetCapabilities'\n",
+    "url_describe_coverage = 'https://nrt.cmems-du.eu/motu-web/wcs?service=wcs&version=2.0.1&request=DescribeCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2'\n",
+    "url_get_coverage = 'https://nrt.cmems-du.eu/motu-web/wcs?service=WCS&version=2.0.1&request=GetCoverage&coverageId=WIND_GLO_WIND_L3_NRT_OBSERVATIONS_012_002-TDS@KNMI-GLO-WIND_L3-OBS_METOP-B_ASCAT_25_DES_V2&subset=Time(1451606400,1451606401)&subset=Lat(50,70)&subset=Lon(0,10)&rangeSubset=wind_speed'"
    ]
   },
   {
