Update CMEMS wave dataset id

--- a/cmems/data_access/cmems_opendap.ipynb
+++ b/cmems/data_access/cmems_opendap.ipynb
@@ -33,6 +33,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58ea02ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b6fe1791",
    "metadata": {},
@@ -59,8 +70,17 @@
     "(or request them from free) as well as the DATASET_ID.'''\n",
     "\n",
     "USERNAME = 'username'\n",
-    "PASSWORD = getpass.getpass('Enter your password: ')\n",
-    "DATASET_ID = 'global-analysis-forecast-wav-001-027'"
+    "PASSWORD = getpass.getpass('Enter your password: ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52fcd2bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_ID = 'cmems_mod_glo_wav_anfc_0.083deg_PT3H-i'"
    ]
   },
   {
@@ -1116,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
